--- a/src/pages/books/books.css
+++ b/src/pages/books/books.css
@@ -35,3 +35,12 @@ img {
    border: 1px solid rgb(204, 204, 243);
   color: rgb(139, 139, 234);
 }
+
+.add {
+    border: none;
+  padding: 3px 6px;
+  background-color: #fff;
+  cursor: pointer;
+   border: 1px solid rgb(204, 204, 243);
+  color: rgb(139, 139, 234);
+}
